deploy/kubernetes/apis4gifts-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apis4giftsservice
  namespace: apis4gifts
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apis4gifts
    microservice: app
