deploy/kubernetes/apis4gifts-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis4giftsingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apis4gifts      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apis4gifts
        backend:
          serviceName: apis4giftsservice
          servicePort: http
